# EvolvingCreatures

./: .gitignore  CMakeLists.txt  README.md
Assets/Shaders/: deferredShaderLightingPass.frag  lightSourceShader.frag  lightingShader.frag
ProjectFiles/Shaders/: deferredShaderGeometryPass.frag  deferredShaderLightingPass.vert  lightingShader.vert  materialShader.frag  materialShader.vert  outlineShader.frag  outlineShader.vert  shader.fs  simpleDepthShader.frag  simpleDepthShader.vert
engine/: CMakeLists.txt
engine/core/: CMakeLists.txt  Input.h  MeshData.h  gltf.h
engine/core/math/: CMakeLists.txt  mat4.h  quat.h  vec3.h  vec4.h
engine/render/: CMakeLists.txt  GraphicsNode.h  Material.h  MeshResource.h  PointLightSource.h  ShaderResource.h  TextureResource.cc  TextureResource.h  camera.h  window.cc  window.h
exts/: CMakeLists.txt
projects/EvolvingCreatures/: CMakeLists.txt
projects/EvolvingCreatures/code/: BoundingBox.cc  BoundingBox.h  Creature.cc  Creature.fbs  Creature.h  CreaturePart.cc  CreaturePart.h  Creature_generated.h  GenerationManager.cc  GenerationManager.h  RandomUtils.h  exampleapp.cc  main.cc
projects/EvolvingCreatures/code/old/: Creature.cc  Creature.h  CreaturePart.cc  CreaturePart.h
